made navbar types dropdown dynamic to use the type api i have in backend, also hooked up the backend with proxy stuff

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -60,12 +60,16 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "buildTarget": "pokemonnn-frontend:build:development"
+          },
           "configurations": {
             "production": {
               "buildTarget": "pokemonnn-frontend:build:production"
             },
             "development": {
-              "buildTarget": "pokemonnn-frontend:build:development"
+              "buildTarget": "pokemonnn-frontend:build:development",
+              "proxyConfig": "proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
